--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "./dist/index.js",
   "scripts": {
-    "r": "tsc && node ./dist/index.js"
+    "build": "tsc && node ./dist/index.js"
   },
   "author": "",
   "license": "MIT",
